--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "DataVisualization/FFC-TreemapDiagram"]
 	path = DataVisualization/FFC-TreemapDiagram
 	url = https://github.com/Pakkerman/FFC-TreemapDiagram
+[submodule "QualityAssurance/FFC-IssueTracker"]
+	path = QualityAssurance/FFC-IssueTracker
+	url = https://github.com/Pakkerman/FFC-IssueTracker
